--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,23 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 chrono = { version = "0.4.41", features = ["serde"] }
+clap = { version = "4.5.40", features = ["derive"] }
 env_logger = "0.11.8"
 futures = "0.3.31"
 inquire = "0.7.5"
 log = "0.4.27"
 reqwest = { version = "0.12.15", features = ["json", "stream"] }
+self-replace = "1.5.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+tempfile = "3.20.0"
 thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["full"] }
 uuid = { version = "1.16.0", features = ["serde"] }
+windows = { version = "0.61.3", features = [
+    "Win32_System_Console",
+    "Win32_System_Services",
+] }
 windows-registry = "0.5.3"
 windows-result = "0.3.4"
 
